feat:修改图片地址

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -84,7 +84,7 @@
 <li>公众号：吴亲强的深夜食堂</li>
 <li>邮箱：wuqinqiang050@gmail.com</li>
 <li>微信:我画你猜
-<img src="https://aabbccm.com/image/wechat-qr.png" alt="image"></li>
+<img src="https://image.syst.top/image/wechat-qr.png" alt="image"></li>
 </ul>
 
 		</div>
