--- a/public/lives/about-everything/index.html
+++ b/public/lives/about-everything/index.html
@@ -60,6 +60,7 @@
 					<a href="https://www.syst.top/translations/">外文翻译</a>
 					<a href="https://www.syst.top/posts/">文章</a>
 					<a href="https://www.syst.top/lives/">生活</a>
+					<a href="https://www.syst.top/friends/">friends</a>
 				</nav>
 			</div>
 			<div class="hdr-right hdr-icons">
