--- a/public/leetcode/213-house-robbe-rii/index.html
+++ b/public/leetcode/213-house-robbe-rii/index.html
@@ -81,6 +81,7 @@ func rob(nums []int) int { n := len(nums) if n == 0 { return 0 } if n == 1 { ret
 					<a href="https://www.syst.top/translations/">外文翻译</a>
 					<a href="https://www.syst.top/posts/">文章</a>
 					<a href="https://www.syst.top/lives/">生活</a>
+					<a href="https://www.syst.top/friends/">friends</a>
 				</nav>
 			</div>
 			<div class="hdr-right hdr-icons">
