feat:新增 grpc-shop 链接

--- a/public/lives/every-one/index.html
+++ b/public/lives/every-one/index.html
@@ -131,11 +131,12 @@
 					<a href="https://www.syst.top">记得</a>
 				</div>
 				<nav class="site-nav hide-in-mobile">
-					<a href="https://www.syst.top/leetcode/">leetcode</a>
-					<a href="https://www.syst.top/translations/">外文翻译</a>
 					<a href="https://www.syst.top/posts/">文章</a>
+					<a href="https://www.syst.top/leetcode/">刷题</a>
 					<a href="https://www.syst.top/lives/">生活</a>
-					<a href="https://www.syst.top/friends/">friends</a>
+					<a href="https://www.syst.top/translations/">翻译</a>
+					<a href="https://www.syst.top/friends/">朋友</a>
+					<a href="https://go.aabbccm.com">grpc-shop</a>
 				</nav>
 			</div>
 			<div class="hdr-right hdr-icons">
