--- a/public/lives/untitled/index.html
+++ b/public/lives/untitled/index.html
@@ -26,11 +26,7 @@
 现在的应届生，也是一种挺惨的职业。不仅面试八股文要相互卷，关注公众号还要疯狂被焦虑。">
 
 <meta itemprop="wordCount" content="31">
-
-
-
-<meta itemprop="keywords" content="" />
-<meta property="og:title" content="" />
+<meta itemprop="keywords" content="" /><meta property="og:title" content="" />
 <meta property="og:description" content="技术公众号会有末日吗 之前心里老想着写一篇文章，题目叫:程序员的末路。不过现在还不到时候，毕竟，我还想象不出程序员都末路了那会是什么样子。
 35 岁普通程序员还是可以想想的。
 不过，比起程序员的末路，我觉得公众号的末路会来的相对早一些。
@@ -48,7 +44,9 @@
 我想，未必吧。
 现在的应届生，也是一种挺惨的职业。不仅面试八股文要相互卷，关注公众号还要疯狂被焦虑。" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://www.syst.top/lives/untitled/" />
+<meta property="og:url" content="https://www.syst.top/lives/untitled/" /><meta property="article:section" content="lives" />
+
+
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
@@ -77,7 +75,7 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 
 	<title></title>
-	<link rel="stylesheet" href="https://www.syst.top/css/style.min.d3141168199607bf3a517216ce3c263814eecdbc8fca72a9a88700799a838219.css">
+	<link rel="stylesheet" href="https://www.syst.top/css/style.min.cb0663fd19952012fdb4a1345792a808ae19eb828578bde6eeae217ff1fb1e8b.css">
 	
 </head>
 
@@ -93,7 +91,7 @@
 					<a href="https://www.syst.top/posts/">文章</a>
 					<a href="https://www.syst.top/leetcode/">刷题</a>
 					<a href="https://www.syst.top/lives/">生活</a>
-					<a href="https://www.syst.top/translations/">翻译</a>
+					<a href="https://www.syst.top/readings/">读书笔记</a>
 					<a href="https://www.syst.top/friends/">朋友</a>
 					<a href="https://go.aabbccm.com">grpc-shop</a>
 				</nav>
@@ -153,7 +151,7 @@
 	</footer>
 
 
-	<script src="https://www.syst.top/js/main.min.784417f5847151f848c339cf0acb13a06cbb648b1483435a28ed4556c4ead69b.js"></script>
+	<script src="https://www.syst.top/js/main.min.c8a831e54547e9c081939713d77308bf58ae5fed99a75acbcaaa14c5ce45bf89.js"></script>
 <script type="application/javascript">
 var doNotTrack = false;
 if (!doNotTrack) {
